syntax = "proto3";

package user;

option go_package = "./user";

import "base.proto";

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  int64  id = 1;
  int32  authority_id = 2;
  int32  status = 3;
  string username = 4;
  string access_token = 5;
  uint64 access_expire = 6;
}

message RegisterReq {
  string user_name = 1;
  string password = 2;
  string email = 3;
}


message ChangePasswordReq {
  uint64 user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

service User {
  rpc changePassword(ChangePasswordReq) returns (BaseResp);
  rpc createUser(RegisterReq) returns (BaseResp);
}
